--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 
 dependencies:
   bloc: ^8.0.2
+  dio: ^4.0.4
   json_annotation: ^4.4.0
   freezed_annotation: ^1.1.0
+  numberpicker: ^2.1.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -18,6 +20,7 @@ dependencies:
   intl: ^0.17.0
 
 dev_dependencies:
+  flutter_native_splash: ^1.3.3
   device_preview: ^1.0.0
   bloc_test: ^9.0.2
   build_runner: ^2.1.7
@@ -31,3 +34,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/logo.png
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/logo.png"
